--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.lib
 Orbit/Model_Resources/EGM_EMM
 Test_Scripts/HIL_Send_Single_Number/Serial.*
+Test_Scripts/Send3_Receive3/Serial.*
 *.o
 *.pdf
 *.exe
