--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 Orbit/Model_Resources/EGM_EMM
 Test_Scripts/HIL_Send_Single_Number/Serial.*
 Test_Scripts/Send3_Receive3/Serial.*
+Test_Scripts/Send6_Receive6/Serial.*
 *.o
 *.pdf
 *.exe
