--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ Test_Scripts/HIL_Send_Single_Number/Serial.*
 Test_Scripts/Send3_Receive3/Serial.*
 Test_Scripts/Send6_Receive6/Serial.*
 Test_Scripts/Telemetry_Test_Hardware_Side/Serial.*
+Test_Scripts/Serial_C++_Test/Serial.*
 *.o
 *.pdf
 *.exe
