Debugging serial library on laptop

--- a/Test_Scripts/Serial_C++_Test/Makefile
+++ b/Test_Scripts/Serial_C++_Test/Makefile
@@ -1,5 +1,5 @@
 CC=g++
-EXECUTABLE=hello_arduino.exe
+EXECUTABLE=hello.exe
 CSOURCES=$(wildcard *.c)
 CPPSOURCES=$(wildcard *.cpp)
 COBJECTS=$(CSOURCES:.c=.o)
