--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 *.out
 *.OUT
 *.lib
+FASTSim/timer.cpp
+FASTSim/timer.h
 Orbit/Model_Resources/EGM_EMM
 Test_Scripts/Send_and_Receive_AB_Processing_RPI/Serial.*
 Test_Scripts/Send_and_Receive_Floats_Processing_RPI/Serial.*
