Added ImportFile to datalogger. added RK4 routine and bare bones dynamic model to FASTsim

--- a/FASTSim/Makefile
+++ b/FASTSim/Makefile
@@ -6,16 +6,19 @@ COBJECTS=$(CSOURCES:.c=.o)
 CPPOBJECTS=$(CPPSOURCES:.cpp=.o)
 OBJECTS=$(COBJECTS) $(CPPOBJECTS)
 COMPILE=-c -w -O3
-DIRECTIVES=#-DREALTIME
+TIME=#-DREALTIME
+HARDWARE=-DDESKTOP
+VEHICLE=-DPOINTSPACE
+FLAGS=-DDEBUG
 LIB= -L/usr/local/lib 
 
 all: $(CSOURCES) $(CPPSOURCES) $(EXECUTABLE)
 $(EXECUTABLE): $(OBJECTS)
 	$(CC) $(OBJECTS) -o $@ $(LIB)
 .c.o:
-	$(CC) $(COMPILE) $(DIRECTIVES) $< -o $@ $(LIB)
+	$(CC) $(COMPILE) $(FLAGS) $(TIME) $(HARDWARE) $(VEHICLE) $< -o $@ $(LIB)
 .cpp.o:
-	$(CC) $(COMPILE) $(DIRECTIVES) $< -o $@ $(LIB)
+	$(CC) $(COMPILE) $(FLAGS) $(TIME) $(HARDWARE) $(VEHICLE) $< -o $@ $(LIB)
 clean:
 	rm -rf $(EXECUTABLE) *.o
 rebuild:
