Added 6DOF dynamics to simulation

--- a/FASTSim/Makefile
+++ b/FASTSim/Makefile
@@ -6,8 +6,8 @@ COBJECTS=$(CSOURCES:.c=.o)
 CPPOBJECTS=$(CPPSOURCES:.cpp=.o)
 OBJECTS=$(COBJECTS) $(CPPOBJECTS)
 COMPILE=-c -w -O3
-VEHICLE=-DPOINTMASS #-DPORTALCUBE #-DAIRCRAFT #-DQUADCOPTER #-DX8
-EXETYPE=-DSIL #-DSIMONLY #-DSIL #-DSIMONLY #-DSIL #-DHIL #-DAUTO 
+VEHICLE=-DPORTALCUBE #-DPOINTMASS #-DPORTALCUBE #-DAIRCRAFT #-DQUADCOPTER #-DX8
+EXETYPE=-DSIL #-DSIMONLY #-DSIMONLY #-DSIL #-DSIMONLY #-DSIL #-DHIL #-DAUTO 
 HARDWARE=-DDESKTOP #-DRPI -DARDUINO
 FLAGS=-DDEBUG
 LIB= -L/usr/local/lib 
