--- a/FASTSim/Makefile
+++ b/FASTSim/Makefile
@@ -7,7 +7,7 @@ CPPOBJECTS=$(CPPSOURCES:.cpp=.o)
 OBJECTS=$(COBJECTS) $(CPPOBJECTS)
 COMPILE=-c -w -O3
 VEHICLE=-DPORTALCUBE #-DPOINTMASS #-DPORTALCUBE #-DAIRCRAFT #-DQUADCOPTER #-DX8
-EXETYPE=-DSIL #-DSIMONLY #-DSIMONLY #-DSIL #-DSIMONLY #-DSIL #-DHIL #-DAUTO 
+EXETYPE=-DSIL #-DSIMONLY #-DSIL #-DHIL #-DAUTO 
 HARDWARE=-DDESKTOP #-DRPI -DARDUINO
 FLAGS=-DDEBUG
 LIB= -L/usr/local/lib 
