Place holders for aerodynamics and controllers have been put in place. RCInput class has also been added. Significant testing is needed but all the code is in there

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,10 @@
 *.OUT
 *.lib
 *.blend*
+FASTSim/aerodynamics.*
+FASTSim/controller.*
 FASTSim/mathp.*
+FASTSim/RCInput.*
 FASTSim/joystick.*
 FASTSim/Rotation3.*
 FASTSim/RK4.*
