Added a backup option for joystick if it is not read

--- a/FASTSim/Makefile
+++ b/FASTSim/Makefile
@@ -6,7 +6,7 @@ COBJECTS=$(CSOURCES:.c=.o)
 CPPOBJECTS=$(CPPSOURCES:.cpp=.o)
 OBJECTS=$(COBJECTS) $(CPPOBJECTS)
 COMPILE=-c -w -O3
-EXETYPE=-DSIMONLY #-DSIMONLY #-DSIL #-DHIL #-DAUTO 
+EXETYPE=-DSIL #-DSIMONLY #-DSIL #-DHIL #-DAUTO 
 HARDWARE=-DDESKTOP #-DRPI -DARDUINO
 FLAGS=-DDEBUG
 LIB= -L/usr/local/lib 
