Changed the way actuator errors are handled in FASTSim

--- a/FASTSim/Makefile
+++ b/FASTSim/Makefile
@@ -10,7 +10,8 @@ EXETYPE=-DSIMONLY #-DSIMONLY #-DSIL #-DHIL #-DAUTO
 HARDWARE=-DDESKTOP #-DRPI -DARDUINO
 FLAGS=-DDEBUG
 LIB=-L/usr/local/lib
-RENDER=#-lGL -lGLU -lglut #you need these if you're compiling OpenGL #sudo apt-get install freeglut3-dev
+#No RENDER IF RPI
+RENDER=-lGL -lGLU -lglut #you need these if you're compiling OpenGL #sudo apt-get install freeglut3-dev
 THREAD=-lpthread -lboost_system -lboost_thread -lboost_date_time #We aren't using this anymore so yea #sudo apt-get install libboost-all-dev
 
 #Flags
