Added RCTech controller to FASTSim

--- a/FASTSim/Makefile
+++ b/FASTSim/Makefile
@@ -6,8 +6,9 @@ COBJECTS=$(CSOURCES:.c=.o)
 CPPOBJECTS=$(CPPSOURCES:.cpp=.o)
 OBJECTS=$(COBJECTS) $(CPPOBJECTS)
 COMPILE=-c -w -O3
-EXETYPE=-DSIMONLY #-DSIMONLY #-DSIL #-DHIL #-DAUTO 
+EXETYPE=-DSIL #-DSIMONLY #-DSIL #-DHIL #-DAUTO 
 HARDWARE=-DDESKTOP #-DRPI -DARDUINO
+CONTROLLER=-DRCTECH #-DXBOX
 FLAGS=-DDEBUG
 LIB=-L/usr/local/lib
 #No RENDER IF RPI
@@ -43,9 +44,9 @@ all: $(CSOURCES) $(CPPSOURCES) $(EXECUTABLE)
 $(EXECUTABLE): $(OBJECTS)
 	$(CC) $(OBJECTS) -o $@ $(LIB) $(RENDER) $(THREAD)
 .c.o:
-	$(CC) $(COMPILE) $(FLAGS) $(HARDWARE) $(EXETYPE) $< -o $@ $(LIB) $(RENDER) $(THREAD)
+	$(CC) $(COMPILE) $(FLAGS) $(CONTROLLER) $(HARDWARE) $(EXETYPE) $< -o $@ $(LIB) $(RENDER) $(THREAD)
 .cpp.o:
-	$(CC) $(COMPILE) $(FLAGS) $(HARDWARE) $(EXETYPE) $< -o $@ $(LIB) $(RENDER) $(THREAD)
+	$(CC) $(COMPILE) $(FLAGS) $(CONTROLLER) $(HARDWARE) $(EXETYPE) $< -o $@ $(LIB) $(RENDER) $(THREAD)
 clean:
 	rm -rf $(EXECUTABLE) *.o
 rebuild:
