Fixed FASTSim after moving Navio files over to this repo

--- a/FASTSim/Makefile
+++ b/FASTSim/Makefile
@@ -6,8 +6,8 @@ COBJECTS=$(CSOURCES:.c=.o)
 CPPOBJECTS=$(CPPSOURCES:.cpp=.o)
 OBJECTS=$(COBJECTS) $(CPPOBJECTS)
 COMPILE=-c -w -O3
-EXETYPE=-DSIL #-DSIMONLY #-DSIL #-DHIL #-DAUTO 
-HARDWARE=-DDESKTOP #-DRPI -DARDUINO
+EXETYPE=-DSIMONLY #-DSIL #-DSIMONLY #-DSIL #-DHIL #-DAUTO 
+HARDWARE=-DRPI #-DDESKTOP #-DRPI -DARDUINO
 CONTROLLER=-DRCTECH #-DXBOX
 FLAGS=-DDEBUG
 LIB=-L/usr/local/lib
