--- a/FASTSim/Makefile
+++ b/FASTSim/Makefile
@@ -6,7 +6,7 @@ COBJECTS=$(CSOURCES:.c=.o)
 CPPOBJECTS=$(CPPSOURCES:.cpp=.o)
 OBJECTS=$(COBJECTS) $(CPPOBJECTS)
 COMPILE=-c -w -O3
-EXETYPE=-DSIL #-DSIL #-DSIMONLY #-DSIL #-DHIL #-DAUTO 
+EXETYPE=-DSIMONLY #-DSIL #-DSIMONLY #-DSIL #-DHIL #-DAUTO 
 HARDWARE=-DDESKTOP #-DRPI #-DDESKTOP #-DRPI -DARDUINO
 CONTROLLER=-DXBOX #-DRCTECH #-DXBOX
 FLAGS=-DDEBUG
