Fixed the barometer class <Finally> I think and I have tested it on FASTLogger for C++. I moved the old version to archive

--- a/Navio/Extra/C++_Examples/Barometer/Makefile
+++ b/Navio/Extra/C++_Examples/Barometer/Makefile
@@ -1,9 +1,9 @@
 CXX ?= g++
-NAVIO = ../../Navio
-INCLUDES = -I ../../Navio
+NAVIO =../../../
+INCLUDES = -I${NAVIO}
 
 all:
-	$(MAKE) -C ../../Navio all
+	$(MAKE) -C ${NAVIO} all
 	$(CXX) $(INCLUDES) Barometer.cpp -L$(NAVIO) -lnavio -o Barometer
 
 clean:
