Edited Telemetry_Class_RPI test to work with new protocols.

--- a/Test_Scripts/Telemetry_Class_RPI/Makefile
+++ b/Test_Scripts/Telemetry_Class_RPI/Makefile
@@ -4,8 +4,8 @@ CPPSOURCES=$(wildcard *.cpp ../../Serial/Telemetry.cpp)
 CPPOBJECTS=$(CPPSOURCES:.cpp=.o)
 OBJECTS=$(CPPOBJECTS)
 COMPILE=-c -w -O3
-DIRECTIVES=
-LIB=-L/usr/local/lib
+DIRECTIVES=-DRPI ##You need this to make sure the computer uses RPI
+LIB=-L/usr/local/lib -lwiringPi #You need -lwiringPi for serial stuff
 INCLUDE=-I../../
 
 all: $(CPPSOURCES) $(EXECUTABLE)
