Dr. Montalvo fixed the sensor errors while I watched

--- a/FASTSim/Makefile
+++ b/FASTSim/Makefile
@@ -1,9 +1,9 @@
-EXETYPE=-DSIL #-DSIL #-DSIMONLY #-DSIL #-DHIL #-DAUTO 
+EXETYPE=-DSIMONLY #-DSIL #-DSIMONLY #-DSIL #-DHIL #-DAUTO 
 HARDWARE=-DDESKTOP #-DRPI #-DDESKTOP #-DRPI -DARDUINO
 CONTROLLER=-DXBOX #-DRCTECH #-DXBOX
 MODELPATH=PortalCube/src
 #Location of HIL.git
-HPATH=/home/azuregypsy13/Documents/GIT/CMontalvo251/HIL
+HPATH=/home/mjcobar13/Documents/GIT/CMontalvo251/HIL
 
 #Flags
 
