--- a/FASTSim/SimPilot/Makefile
+++ b/FASTSim/SimPilot/Makefile
@@ -5,6 +5,11 @@ HPATH=/home/carlos/Git_Repos/Github/HIL
 #HPATH=/home/pi/HIL
 ##########################################################
 
+##############WHAT VEHICLE ARE YOU RUNNING THIS ON###########
+#Quadcopter,PortalCube
+MODEL=Quadcopter
+############################################################
+
 #########################WHAT MODE ARE YOU RUNNING IN?#############
 #EXETYPE=-DAUTO ##For running in autonomous mode rather than simulation
 EXETYPE=-DSIL ##For running in real time
@@ -22,32 +27,45 @@ CONTROLLER=-DXBOX
 
 CC=g++
 EXECUTABLE=SimPilot.exe
-CPPSOURCES=$(wildcard *.cpp ../../Timer/timer.cpp ../../MATLAB/MATLAB.cpp ${HPATH}/RCIO/RCInput.cpp ../../Mathp/mathp.cpp ${HPATH}/IMU/IMU.cpp ${HPATH}/IMU/AHRS.cpp ${HPATH}/IMU/MPU9250.cpp ${HPATH}/IMU/LSM9DS1.cpp)
-CPPOBJECTS=$(CPPSOURCES:.cpp=.o)
-OBJECTS=$(CPPOBJECTS)
+CPPDIR=../../
+MODELPATH=../
+CPPSOURCES=$(wildcard *.cpp ${CPPDIR}Timer/timer.cpp ${CPPDIR}MATLAB/MATLAB.cpp ${CPPDIR}Mathp/mathp.cpp)
+IMUSOURCES=$(wildcard ${HPATH}/IMU/*.cpp)
+RCIOSOURCES=${HPATH}/RCIO/RCInput.cpp
+MODELSOURCES=$(wildcard ${MODELPATH}${MODEL}/src/*.cpp)
+SOURCES=${CPPSOURCES} ${IMUSOURCES} ${RCIOSOURCES} ${MODELSOURCES}
+OBJECTS=$(SOURCES:.cpp=.o)
 COMPILE=-c -w -O3
 LIB=-L/usr/local/lib
-INCLUDE=-I../../ -I${HPATH}
+INCLUDE=-I../../ -I${HPATH} -I${MODELPATH}${MODEL}/src
 
-all: $(CPPSOURCES) $(EXECUTABLE)
+all: $(SOURCES) $(EXECUTABLE)
 $(EXECUTABLE): $(OBJECTS)
 	$(CC) $(OBJECTS) -o $@ $(LIB) $(INCLUDE)
 .cpp.o:
 	$(CC) $(COMPILE) $(EXETYPE) $(HARDWARE) $(CONTROLLER) $< -o $@ $(LIB) $(INCLUDE) $(RENDER) $(THREAD)
+who:
+	echo 'CPP Sources' ${CPPSOURCES}
+	echo 'IMU Sources' ${IMUSOURCES}
+	echo 'RCIO Sources' ${RCIOSOURCES}
+	echo 'Sources' ${SOURCES}
+	echo 'Objects' ${OBJECTS}
 clean:
 	echo ' ' > d.exe
 	echo ' ' > d.o
 	rm *.exe *.o
-	echo ' ' > ../MATLAB/d.o
-	rm ../MATLAB/*.o
-	echo ' ' > ../Mathp/d.o
-	rm ../Mathp/*.o
+	echo ' ' > ${CPPDIR}MATLAB/d.o
+	rm ${CPPDIR}MATLAB/*.o
+	echo ' ' > ${CPPDIR}Mathp/d.o
+	rm ${CPPDIR}Mathp/*.o
 	echo ' ' > ${HPATH}/RCIO/d.o
 	rm ${HPATH}/RCIO/*.o
 	echo ' ' > ${HPATH}/IMU/d.o
 	rm ${HPATH}/IMU/*.o
-	echo ' ' > ../Timer/d.o
-	rm ../Timer/*.o
+	echo ' ' > ${CPPDIR}Timer/d.o
+	rm ${CPPDIR}Timer/*.o
+	echo ' ' > ${MODELPATH}${MODEL}/src/d.o
+	rm ${MODELPATH}${MODEL}/src/*.o
 rebuild:
 	make clean
 	make
