--- a/FASTSim/SimPilot/Makefile
+++ b/FASTSim/SimPilot/Makefile
@@ -1,8 +1,8 @@
 #####################WHERE IS HIL LOCATED?#####################
 #HPATH=/home/mjcobar13/Documents/GIT/CMontalvo251/HIL
-HPATH=/home/carlos/Git_Repos/Github/HIL
+#HPATH=/home/carlos/Git_Repos/Github/HIL
 #HPATH=/home/carlos/Files/Git_Repos/Github/HIL
-#HPATH=/home/pi/HIL
+HPATH=/home/pi/HIL
 ##########################################################
 
 ##############WHAT VEHICLE ARE YOU RUNNING THIS ON###########
@@ -11,18 +11,22 @@ MODEL=Quadcopter
 ############################################################
 
 #########################WHAT MODE ARE YOU RUNNING IN?#############
-#EXETYPE=-DAUTO ##For running in autonomous mode rather than simulation
-EXETYPE=-DSIL ##For running in real time
+#AUTO,SIL
+EXETYPE=-DAUTO ##For running in autonomous mode rather than simulation
+#EXETYPE=-DSIL ##For running in real time
 ########################################################
 
 ###############################HARDWARE#######################
-#HARDWARE=-DRPI #on RPI
-HARDWARE=-DDESKTOP #on Desktop
+#DESKTOP, RPI
+#HARDWARE=-DDESKTOP #on Desktop
+HARDWARE=-DRPI #on the raspberry pi
 ########################################################
 
 #####################WHAT TYPE OF TRANSMITTER ARE YOU USING?###############
+#FLYSKY, XBOX, RCTECH
 #CONTROLLER=-DFLYSKY ##IRIS 3DR transmitters in FASTLab
-CONTROLLER=-DXBOX
+#CONTROLLER=-DXBOX
+CONTROLLER=-DFLYSKY
 #######################################################################
 
 CC=g++
