--- a/FASTSim/Makefile
+++ b/FASTSim/Makefile
@@ -3,7 +3,7 @@
 #SIL - this is software in the loop running in realtime
 #HIL - this is in real time and also requires Serial communication betwee desktop and computer
 #AUTO - this is no simulation at all and will run on control board
-EXETYPE=-DSIMONLY 
+EXETYPE=-DSIMONLY
 #############################################################
 
 #################WHAT HARDWARE ARE YOU RUNNING ON#############
@@ -14,7 +14,10 @@ HARDWARE=-DDESKTOP
 ###########################################################
 
 ###################WHAT TYPE OF TRANSMITTER ARE YOU USING?#########
-CONTROLLER=-DXBOX #-DRCTECH #-DXBOX
+#RCTECH - USB Controller in FASTLab
+#XBOX - USB XBOX controller at home
+#FLYSKY - Iris+ transmitter in FASTLab for Iris+ drones
+CONTROLLER=-DXBOX
 ############################################################
 
 #########WHAT MODEL DO YOU WANT??##############
@@ -25,8 +28,8 @@ MODELPATH=Quadcopter/src
 
 #####################WHERE IS HIL LOCATED?#####################
 #HPATH=/home/mjcobar13/Documents/GIT/CMontalvo251/HIL
-#HPATH=/home/carlos/Git_Repos/Github/HIL
-HPATH=/home/carlos/Files/Git_Repos/Github/HIL
+HPATH=/home/carlos/Git_Repos/Github/HIL
+#HPATH=/home/carlos/Files/Git_Repos/Github/HIL
 ##########################################################
 
 ##NON USER FLAGS
@@ -41,10 +44,10 @@ HPATH=/home/carlos/Files/Git_Repos/Github/HIL
 
 CC=g++
 EXECUTABLE=FASTSim.exe
-CCPDIR=../
+CPPDIR=../
 CPPSOURCES=$(wildcard *.cpp ${CPPDIR}Timer/timer.cpp ${CPPDIR}MATLAB/MATLAB.cpp ${CPPDIR}Mathp/mathp.cpp ${CPPDIR}/Datalogger/Datalogger.cpp ${CPPDIR}/6DOF/Rotation3.cpp ${CPPDIR}/Sensors/sensors.cpp ${CPPDIR}/OpenGL/opengl.cpp ${CPPDIR}/RK4/RK4.cpp)
 IMUSOURCES=$(wildcard ${HPATH}/IMU/*.cpp)
-RCIOSOURCES=$(${HPATH}/RCIO/RCInput.cpp ${HPATH}/RCIO/RCOutput.cpp)
+RCIOSOURCES=$(wildcard ${HPATH}/RCIO/*.cpp)
 MODELSOURCES=$(wildcard ${MODELPATH}/*.cpp)
 SOURCES=${CPPSOURCES} ${IMUSOURCES} ${RCIOSOURCES} ${MODELSOURCES}
 OBJECTS=$(SOURCES:.cpp=.o)
@@ -57,11 +60,9 @@ RENDER=-lGL -lGLU -lglut #you need these if you're compiling OpenGL #sudo apt-ge
 THREAD=-lpthread -lboost_system -lboost_thread -lboost_date_time #We are using this for the rendering pipeline so yea #sudo apt-get install libboost-all-dev
 
 
-all: $(CPPSOURCES) $(EXECUTABLE)
+all: $(SOURCES) $(EXECUTABLE)
 $(EXECUTABLE): $(OBJECTS)
 	$(CC) $(OBJECTS) -o $@ $(LIB) $(INCLUDE) $(RENDER) $(THREAD)
-.c.o:
-	$(CC) $(COMPILE) $(FLAGS) $(CONTROLLER) $(HARDWARE) $(EXETYPE) $< -o $@ $(LIB) $(INCLUDE) $(RENDER) $(THREAD)
 .cpp.o:
 	$(CC) $(COMPILE) $(FLAGS) $(CONTROLLER) $(HARDWARE) $(EXETYPE) $< -o $@ $(LIB) $(INCLUDE) $(RENDER) $(THREAD)
 clean:
