--- a/FASTSim/SimPilot/Makefile
+++ b/FASTSim/SimPilot/Makefile
@@ -1,8 +1,8 @@
 #####################WHERE IS HIL LOCATED?#####################
 #HPATH=/home/mjcobar13/Documents/GIT/CMontalvo251/HIL
-#HPATH=/home/carlos/Git_Repos/Github/HIL
+HPATH=/home/carlos/Git_Repos/Github/HIL
 #HPATH=/home/carlos/Files/Git_Repos/Github/HIL
-HPATH=/home/pi/HIL
+#HPATH=/home/pi/HIL
 ##########################################################
 
 ##############WHAT VEHICLE ARE YOU RUNNING THIS ON###########
@@ -12,21 +12,21 @@ MODEL=Quadcopter
 
 #########################WHAT MODE ARE YOU RUNNING IN?#############
 #AUTO,SIL
-EXETYPE=-DAUTO ##For running in autonomous mode rather than simulation
-#EXETYPE=-DSIL ##For running in real time
+#EXETYPE=-DAUTO ##For running in autonomous mode rather than simulation
+EXETYPE=-DSIL ##For running in real time
 ########################################################
 
 ###############################HARDWARE#######################
 #DESKTOP, RPI
-#HARDWARE=-DDESKTOP #on Desktop
-HARDWARE=-DRPI #on the raspberry pi
+HARDWARE=-DDESKTOP #on Desktop
+#HARDWARE=-DRPI #on the raspberry pi
 ########################################################
 
 #####################WHAT TYPE OF TRANSMITTER ARE YOU USING?###############
 #FLYSKY, XBOX, RCTECH
 #CONTROLLER=-DFLYSKY ##IRIS 3DR transmitters in FASTLab
-#CONTROLLER=-DXBOX
-CONTROLLER=-DFLYSKY
+CONTROLLER=-DXBOX
+#CONTROLLER=-DFLYSKY
 #######################################################################
 
 CC=g++
@@ -35,7 +35,7 @@ CPPDIR=../../
 MODELPATH=../
 CPPSOURCES=$(wildcard *.cpp ${CPPDIR}Timer/timer.cpp ${CPPDIR}MATLAB/MATLAB.cpp ${CPPDIR}Mathp/mathp.cpp)
 IMUSOURCES=$(wildcard ${HPATH}/IMU/*.cpp)
-RCIOSOURCES=${HPATH}/RCIO/RCInput.cpp
+RCIOSOURCES=$(wildcard ${HPATH}/RCIO/*.cpp)
 MODELSOURCES=$(wildcard ${MODELPATH}${MODEL}/src/*.cpp)
 SOURCES=${CPPSOURCES} ${IMUSOURCES} ${RCIOSOURCES} ${MODELSOURCES}
 OBJECTS=$(SOURCES:.cpp=.o)
