Tuned some gains

--- a/FASTSim/Makefile
+++ b/FASTSim/Makefile
@@ -3,8 +3,8 @@
 #SIL - this is software in the loop running in realtime
 #HIL - this is in real time and also requires Serial communication betwee desktop and computer
 #AUTO - this is no simulation at all and will run on control board
-EXETYPE=-DSIMONLY
-#EXETYPE=-DSIL
+#EXETYPE=-DSIMONLY
+EXETYPE=-DSIL
 #############################################################
 
 #################WHAT HARDWARE ARE YOU RUNNING ON#############
@@ -18,8 +18,8 @@ HARDWARE=-DDESKTOP
 #RCTECH - USB Controller in FASTLab
 #XBOX - USB XBOX controller at home
 #FLYSKY - Iris+ transmitter in FASTLab for Iris+ drones
-CONTROLLER=-DXBOX
-#CONTROLLER=-DRCTECH
+#CONTROLLER=-DXBOX
+CONTROLLER=-DRCTECH
 ############################################################
 
 #########WHAT MODEL DO YOU WANT??##############
@@ -30,8 +30,8 @@ MODELPATH=Quadcopter/src
 
 #####################WHERE IS HIL LOCATED?#####################
 #HPATH=/home/mjcobar13/Documents/GIT/CMontalvo251/HIL
-HPATH=/home/carlos/Git_Repos/Github/HIL
-#HPATH=/home/carlos/Files/Git_Repos/Github/HIL
+#HPATH=/home/carlos/Git_Repos/Github/HIL
+HPATH=/home/carlos/Files/Git_Repos/Github/HIL
 ##########################################################
 
 ##NON USER FLAGS
