--- a/FASTSim/Makefile
+++ b/FASTSim/Makefile
@@ -4,25 +4,31 @@
 #HIL - this is in real time and also requires Serial communication betwee desktop and computer
 #AUTO - this is no simulation at all and will run on control board
 #EXETYPE=-DSIMONLY
-#EXETYPE=-DSIL
-EXETYPE=-DAUTO
+EXETYPE=-DSIL
+#EXETYPE=-DAUTO
 #############################################################
 
 #################WHAT HARDWARE ARE YOU RUNNING ON#############
 #DESKTOP - running on a laptop or desktop macine
 #RPI - running on a raspbery pi 
 #ARDUINO - running on an arduino (may require a separate ino)
-#HARDWARE=-DDESKTOP
-HARDWARE=-DRPI
+HARDWARE=-DDESKTOP
+#HARDWARE=-DRPI
 ###########################################################
+
+###################RENDER????########################
+#Either OpenGL or nothing
+#RENDER=
+RENDER=-lGL -lGLU -lglut #you need these if you're compiling OpenGL #sudo apt-get install freeglut3-dev
+################################################################
 
 ###################WHAT TYPE OF TRANSMITTER ARE YOU USING?#########
 #RCTECH - USB Controller in FASTLab
 #XBOX - USB XBOX controller at home
 #FLYSKY - Iris+ transmitter in FASTLab for Iris+ drones
 #CONTROLLER=-DXBOX
-#CONTROLLER=-DRCTECH
-CONTROLLER=-DFLYSKY
+CONTROLLER=-DRCTECH
+#CONTROLLER=-DFLYSKY
 ############################################################
 
 #########WHAT MODEL DO YOU WANT??##############
@@ -35,8 +41,8 @@ MODELPATH=Tank/src
 #####################WHERE IS HIL LOCATED?#####################
 #HPATH=/home/mjcobar13/Documents/GIT/CMontalvo251/HIL
 #HPATH=/home/carlos/Git_Repos/Github/HIL
-#HPATH=/home/carlos/Files/Git_Repos/Github/HIL
-HPATH=/home/pi/HIL
+HPATH=/home/carlos/Files/Git_Repos/Github/HIL
+#HPATH=/home/pi/HIL
 ##########################################################
 
 ##NON USER FLAGS
@@ -57,14 +63,13 @@ OPENGLSOURCES=${CPPDIR}/OpenGL/opengl.cpp
 IMUSOURCES=$(wildcard ${HPATH}/IMU/*.cpp)
 RCIOSOURCES=$(wildcard ${HPATH}/RCIO/*.cpp ${HPATH}/Util/Util.cpp)
 MODELSOURCES=$(wildcard ${MODELPATH}/*.cpp)
-SOURCES=${CPPSOURCES} ${IMUSOURCES} ${RCIOSOURCES} ${MODELSOURCES} #${OPENGLSOURCES}
+SOURCES=${CPPSOURCES} ${IMUSOURCES} ${RCIOSOURCES} ${MODELSOURCES} ${OPENGLSOURCES}
 OBJECTS=$(SOURCES:.cpp=.o)
 COMPILE=-c -w -O3
 FLAGS=-DDEBUG
 LIB=-L/usr/local/lib
 INCLUDE=-I${MODELPATH} -I../ -I${HPATH}
 #No RENDER IF RPI
-RENDER= #-lGL -lGLU -lglut #you need these if you're compiling OpenGL #sudo apt-get install freeglut3-dev
 THREAD=-lpthread -lboost_system -lboost_thread -lboost_date_time #We are using this for the rendering pipeline so yea #sudo apt-get install libboost-all-dev
 
 
