--- a/FASTSim/Makefile
+++ b/FASTSim/Makefile
@@ -3,8 +3,8 @@
 #SIL - this is software in the loop running in realtime
 #HIL - this is in real time and also requires Serial communication betwee desktop and computer
 #AUTO - this is no simulation at all and will run on control board
-#EXETYPE=-DSIMONLY
-EXETYPE=-DSIL
+EXETYPE=-DSIMONLY
+#EXETYPE=-DSIL
 #EXETYPE=-DAUTO
 #############################################################
 
@@ -34,14 +34,14 @@ CONTROLLER=-DRCTECH
 #########WHAT MODEL DO YOU WANT??##############
 #This needs to point to a source folder with aerodynamics.* and controller.*
 #MODELPATH=PortalCube/src
-#MODELPATH=Quadcopter/src
-MODELPATH=Tank/src
+MODELPATH=Quadcopter/src
+#MODELPATH=Tank/src
 ###########################################
 
 #####################WHERE IS HIL LOCATED?#####################
 #HPATH=/home/mjcobar13/Documents/GIT/CMontalvo251/HIL
-#HPATH=/home/carlos/Git_Repos/Github/HIL
-HPATH=/home/carlos/Files/Git_Repos/Github/HIL
+HPATH=/home/carlos/Git_Repos/Github/HIL
+#HPATH=/home/carlos/Files/Git_Repos/Github/HIL
 #HPATH=/home/pi/HIL
 ##########################################################
 
@@ -61,9 +61,12 @@ CPPDIR=../
 CPPSOURCES=$(wildcard *.cpp ${CPPDIR}Timer/timer.cpp ${CPPDIR}MATLAB/MATLAB.cpp ${CPPDIR}Mathp/mathp.cpp ${CPPDIR}/Datalogger/Datalogger.cpp ${CPPDIR}/6DOF/Rotation3.cpp ${CPPDIR}/Sensors/sensors.cpp ${CPPDIR}/RK4/RK4.cpp)
 OPENGLSOURCES=${CPPDIR}/OpenGL/opengl.cpp
 IMUSOURCES=$(wildcard ${HPATH}/IMU/*.cpp)
+GPSSOURCES=$(wildcard ${HPATH}/GPS/*.cpp)
+BAROSOURCES=$(wildcard ${HPATH}/Baro/*.cpp)
+ADCSOURCES=$(wildcard ${HPATH}/ADC/*.cpp)
 RCIOSOURCES=$(wildcard ${HPATH}/RCIO/*.cpp ${HPATH}/Util/Util.cpp)
 MODELSOURCES=$(wildcard ${MODELPATH}/*.cpp)
-SOURCES=${CPPSOURCES} ${IMUSOURCES} ${RCIOSOURCES} ${MODELSOURCES} ${OPENGLSOURCES}
+SOURCES=${CPPSOURCES} ${IMUSOURCES} ${RCIOSOURCES} ${MODELSOURCES} ${OPENGLSOURCES} ${GPSSOURCES} ${BAROSOURCES} ${ADCSOURCES}
 OBJECTS=$(SOURCES:.cpp=.o)
 COMPILE=-c -w -O3
 FLAGS=-DDEBUG
@@ -108,6 +111,12 @@ clean:
 	rm ../OpenGL/*.o
 	echo ' ' > ${HPATH}/IMU/d.o
 	rm ${HPATH}/IMU/*.o
+	echo ' ' > ${HPATH}/Baro/d.o
+	rm ${HPATH}/Baro/*.o
+	echo ' ' > ${HPATH}/GPS/d.o
+	rm ${HPATH}/GPS/*.o
+	echo ' ' > ${HPATH}/ADC/d.o
+	rm ${HPATH}/ADC/*.o
 rebuild:
 	make clean
 	make
