--- a/FASTSim/Makefile
+++ b/FASTSim/Makefile
@@ -1,25 +1,32 @@
+#DO NOT CHANGE THIS
+CPPDIR=../
+
+##############CHANGE EVERYTHING BELOW HERE####################
+
 ###############WHAT SIMULATION TYPE DO YOU WANT###############
 #SIMONLY - this as fast as possible to generate plots
 #SIL - this is software in the loop running in realtime
 #HIL - this is in real time and also requires Serial communication betwee desktop and computer
 #AUTO - this is no simulation at all and will run on control board
-EXETYPE=-DSIMONLY
+#EXETYPE=-DSIMONLY
 #EXETYPE=-DSIL
-#EXETYPE=-DAUTO
+EXETYPE=-DAUTO
 #############################################################
 
 #################WHAT HARDWARE ARE YOU RUNNING ON#############
 #DESKTOP - running on a laptop or desktop macine
 #RPI - running on a raspbery pi 
 #ARDUINO - running on an arduino (may require a separate ino)
-HARDWARE=-DDESKTOP
-#HARDWARE=-DRPI
+#HARDWARE=-DDESKTOP
+HARDWARE=-DRPI
 ###########################################################
 
 ###################RENDER????########################
 #Either OpenGL or nothing
-#RENDER=
-RENDER=-lGL -lGLU -lglut #you need these if you're compiling OpenGL #sudo apt-get install freeglut3-dev
+RENDER=
+OPENGLSOURCES=
+#RENDER=-lGL -lGLU -lglut #you need these if you're compiling OpenGL #sudo apt-get install freeglut3-dev
+#OPENGLSOURCES=${CPPDIR}/OpenGL/opengl.cpp
 ################################################################
 
 ###################WHAT TYPE OF TRANSMITTER ARE YOU USING?#########
@@ -27,23 +34,25 @@ RENDER=-lGL -lGLU -lglut #you need these if you're compiling OpenGL #sudo apt-ge
 #XBOX - USB XBOX controller at home
 #FLYSKY - Iris+ transmitter in FASTLab for Iris+ drones
 #CONTROLLER=-DXBOX
-CONTROLLER=-DRCTECH
-#CONTROLLER=-DFLYSKY
+#CONTROLLER=-DRCTECH
+CONTROLLER=-DFLYSKY
 ############################################################
 
 #########WHAT MODEL DO YOU WANT??##############
 #This needs to point to a source folder with aerodynamics.* and controller.*
 #MODELPATH=PortalCube/src
-MODELPATH=Quadcopter/src
-#MODELPATH=Tank/src
+#MODELPATH=Quadcopter/src
+MODELPATH=Tank/src
 ###########################################
 
 #####################WHERE IS HIL LOCATED?#####################
 #HPATH=/home/mjcobar13/Documents/GIT/CMontalvo251/HIL
-HPATH=/home/carlos/Git_Repos/Github/HIL
+#HPATH=/home/carlos/Git_Repos/Github/HIL
 #HPATH=/home/carlos/Files/Git_Repos/Github/HIL
-#HPATH=/home/pi/HIL
+HPATH=/home/pi/HIL
 ##########################################################
+
+#################DO NOT CHANGE ANYTHING BELOW HERE###########
 
 ##NON USER FLAGS
 ##When running on Desktop control defaults to JOYSTICK, and sensors default to SENSORBLOCK
@@ -57,9 +66,7 @@ HPATH=/home/carlos/Git_Repos/Github/HIL
 
 CC=g++
 EXECUTABLE=FASTSim.exe
-CPPDIR=../
 CPPSOURCES=$(wildcard *.cpp ${CPPDIR}Timer/timer.cpp ${CPPDIR}MATLAB/MATLAB.cpp ${CPPDIR}Mathp/mathp.cpp ${CPPDIR}/Datalogger/Datalogger.cpp ${CPPDIR}/6DOF/Rotation3.cpp ${CPPDIR}/Sensors/sensors.cpp ${CPPDIR}/RK4/RK4.cpp)
-OPENGLSOURCES=${CPPDIR}/OpenGL/opengl.cpp
 IMUSOURCES=$(wildcard ${HPATH}/IMU/*.cpp)
 GPSSOURCES=$(wildcard ${HPATH}/GPS/*.cpp)
 BAROSOURCES=$(wildcard ${HPATH}/Baro/*.cpp)
@@ -68,11 +75,11 @@ RCIOSOURCES=$(wildcard ${HPATH}/RCIO/*.cpp ${HPATH}/Util/Util.cpp)
 MODELSOURCES=$(wildcard ${MODELPATH}/*.cpp)
 SOURCES=${CPPSOURCES} ${IMUSOURCES} ${RCIOSOURCES} ${MODELSOURCES} ${OPENGLSOURCES} ${GPSSOURCES} ${BAROSOURCES} ${ADCSOURCES}
 OBJECTS=$(SOURCES:.cpp=.o)
-COMPILE=-c -w -O3
+#COMPILE=-c -w -O3 #MIGHT NEED THIS LATER FOR SIL AND SIMONLY
+COMPILE=-c -w -std=c++11 -Wno-psabi
 FLAGS=-DDEBUG
 LIB=-L/usr/local/lib
 INCLUDE=-I${MODELPATH} -I../ -I${HPATH}
-#No RENDER IF RPI
 THREAD=-lpthread -lboost_system -lboost_thread -lboost_date_time #We are using this for the rendering pipeline so yea #sudo apt-get install libboost-all-dev
 
 
