--- a/FASTSim/Makefile
+++ b/FASTSim/Makefile
@@ -9,24 +9,24 @@ CPPDIR=../
 #HIL - this is in real time and also requires Serial communication betwee desktop and computer
 #AUTO - this is no simulation at all and will run on control board
 #EXETYPE=-DSIMONLY
-#EXETYPE=-DSIL
-EXETYPE=-DAUTO
+EXETYPE=-DSIL
+#EXETYPE=-DAUTO
 #############################################################
 
 #################WHAT HARDWARE ARE YOU RUNNING ON#############
 #DESKTOP - running on a laptop or desktop macine
 #RPI - running on a raspbery pi 
 #ARDUINO - running on an arduino (may require a separate ino)
-#HARDWARE=-DDESKTOP
-HARDWARE=-DRPI
+HARDWARE=-DDESKTOP
+#HARDWARE=-DRPI
 ###########################################################
 
 ###################RENDER????########################
 #Either OpenGL or nothing
-RENDER=
-OPENGLSOURCES=
-#RENDER=-lGL -lGLU -lglut #you need these if you're compiling OpenGL #sudo apt-get install freeglut3-dev
-#OPENGLSOURCES=${CPPDIR}/OpenGL/opengl.cpp
+#RENDER=
+#OPENGLSOURCES=
+RENDER=-lGL -lGLU -lglut #you need these if you're compiling OpenGL #sudo apt-get install freeglut3-dev
+OPENGLSOURCES=${CPPDIR}/OpenGL/opengl.cpp
 ################################################################
 
 ###################WHAT TYPE OF TRANSMITTER ARE YOU USING?#########
@@ -34,8 +34,8 @@ OPENGLSOURCES=
 #XBOX - USB XBOX controller at home
 #FLYSKY - Iris+ transmitter in FASTLab for Iris+ drones
 #CONTROLLER=-DXBOX
-#CONTROLLER=-DRCTECH
-CONTROLLER=-DFLYSKY
+CONTROLLER=-DRCTECH
+#CONTROLLER=-DFLYSKY
 ############################################################
 
 #########WHAT MODEL DO YOU WANT??##############
@@ -48,8 +48,8 @@ MODELPATH=Tank/src
 #####################WHERE IS HIL LOCATED?#####################
 #HPATH=/home/mjcobar13/Documents/GIT/CMontalvo251/HIL
 #HPATH=/home/carlos/Git_Repos/Github/HIL
-#HPATH=/home/carlos/Files/Git_Repos/Github/HIL
-HPATH=/home/pi/HIL
+HPATH=/home/carlos/Files/Git_Repos/Github/HIL
+#HPATH=/home/pi/HIL
 ##########################################################
 
 #################DO NOT CHANGE ANYTHING BELOW HERE###########
