Fixed some tabs;

--- a/FASTSim/Makefile
+++ b/FASTSim/Makefile
@@ -33,23 +33,23 @@ OPENGLSOURCES=${CPPDIR}/OpenGL/opengl.cpp
 #RCTECH - USB Controller in FASTLab
 #XBOX - USB XBOX controller at home
 #FLYSKY - Iris+ transmitter in FASTLab for Iris+ drones
-CONTROLLER=-DXBOX
-#CONTROLLER=-DRCTECH
+#CONTROLLER=-DXBOX
+CONTROLLER=-DRCTECH
 #CONTROLLER=-DFLYSKY
 ############################################################
 
 #########WHAT MODEL DO YOU WANT??##############
 #This needs to point to a source folder with aerodynamics.* and controller.*
 #MODELPATH=PortalCube/src
-#MODELPATH=Quadcopter/src
+MODELPATH=Quadcopter/src
 #MODELPATH=Tank/src
-MODELPATH=Airplane/src
+#MODELPATH=Airplane/src
 ###########################################
 
 #####################WHERE IS HIL LOCATED?#####################
 #HPATH=/home/mjcobar13/Documents/GIT/CMontalvo251/HIL
-HPATH=/home/carlos/Git_Repos/Github/HIL
-#HPATH=/home/carlos/Files/Git_Repos/Github/HIL
+#HPATH=/home/carlos/Git_Repos/Github/HIL
+HPATH=/home/carlos/Files/Git_Repos/Github/HIL
 #HPATH=/home/pi/HIL
 ##########################################################
 
