Added force and moment model to Tank

--- a/FASTSim/Makefile
+++ b/FASTSim/Makefile
@@ -41,8 +41,8 @@ CONTROLLER=-DRCTECH
 #########WHAT MODEL DO YOU WANT??##############
 #This needs to point to a source folder with aerodynamics.* and controller.*
 #MODELPATH=PortalCube/src
-MODELPATH=Quadcopter/src
-#MODELPATH=Tank/src
+#MODELPATH=Quadcopter/src
+MODELPATH=Tank/src
 #MODELPATH=Airplane/src
 ###########################################
 
